最初の構造

--- a/card.html
+++ b/card.html
@@ -4,8 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Card Memo サンプル</title>
+  <style>
+    #main{
+
+      color: aliceblue;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+    div{
+      background-color: blue;
+      margin: 5px;
+      width: 300px;
+    }
+  </style>
 </head>
 <body>
-  
+  <button id="add">追加</button>
+  <main id="main">
+    <div>aaa</div>
+    <div>bbb</div>
+    <div>ddd</div>
+    <div>eee</div>
+    <div>ccc</div>
+    <div>fff</div>
+  </main>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script>
+  </script>
 </body>
 </html>
