--- a/card.html
+++ b/card.html
@@ -24,29 +24,46 @@
   <body>
     <button id="add">追加</button>
     <button id="save">保存</button>
+    <button id="clear">削除</button>
     <main id="main"></main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
       let c = 0;
-      $("#add").on("click", function () {
+      $("#add").on("click",function () {
         $("#main>div").removeClass("new");
         c++;
         const html = `
-     <div class="new">${c}<textarea id="add_${c}"></div>
+     <div class="new">${c}<textarea id="add_${c}" class="memo"></textarea></div>
      `;
         $("#main").append(html);
       });
-      $("save").on("click", function () {
+
+      $("save").on("click",function () {
         const len = $(".memo").length;
         let ary = [];
-        for (let i=0; i<len; i++) {
+        for (let i = 0; i < len; i++) {
           ary[i] = $("#add_" + i).val();
         }
-        console.log(ary);
-        
-        
+        localStorage.setItem("card", JSON.stringify(ary));
       });
+
+      $("#clear").on("click",function(){
+        localStorage.clear();
+        $("#main").empty();
+        c=0;
+      });
+
+      window.onload = function () {
+        const ary = JSON.parse(localStorage.getItem("card"));
+        for (let i = 0; i < ary.length; i++) {
+          const html = `
+             <div class="new">${i+1}<textarea id="add_${i+1}" class="memo">${ary[i]}</textarea></div>
+          `;
+          $("#main").append(html);
+          c = i+1;
+        }
+      };
     </script>
   </body>
 </html>
