--- a/card.html
+++ b/card.html
@@ -17,7 +17,7 @@
         width: 300px;
       }
       .new {
-        border: 5px solid yellow;
+        border: 5px solid rgb(255, 255, 124);
       }
     </style>
   </head>
@@ -39,7 +39,7 @@
         $("#main").append(html);
       });
 
-      $("save").on("click",function () {
+      $("#save").on("click",function () {
         const len = $(".memo").length;
         let ary = [];
         for (let i = 0; i < len; i++) {
@@ -55,13 +55,13 @@
       });
 
       window.onload = function () {
-        const ary = JSON.parse(localStorage.getItem("card"));
+        const ary = JSON.parse(localStorage.getItem("card")) || [];
+        let c = ary.length;
         for (let i = 0; i < ary.length; i++) {
           const html = `
              <div class="new">${i+1}<textarea id="add_${i+1}" class="memo">${ary[i]}</textarea></div>
           `;
           $("#main").append(html);
-          c = i+1;
         }
       };
     </script>
