--- a/card.html
+++ b/card.html
@@ -18,18 +18,26 @@ body {
   }
 
   div {
-    background-color: #334455; /* 深い青のカード */
-    color: #ffffff; /* 白いテキスト */
-    width: 350px;
-    height: 200px;
-    box-shadow: 0 4px 8px rgb(0, 0, 0, 0.1);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
+  background-color: #334455;
+  color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 80%; /* カードの幅を80%に設定 */
+  height: 300px; /* カードの高さを調整 */
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+textarea {
+  width: 90%; /* テキストエリアをカードの80%に設定 */
+  height: 70%; /* テキストエリアの高さを調整 */
+  margin: 10px; /* マージンを追加して余白を減らす */
+  resize: none; /* ユーザーがテキストエリアのサイズを変更できないようにする */
+}
+
 
   div:hover {
     transform: scale(1.05);
