--- a/card.html
+++ b/card.html
@@ -21,23 +21,26 @@ body {
   background-color: #334455;
   color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 80%; /* カードの幅を80%に設定 */
-  height: 300px; /* カードの高さを調整 */
+  width: 70%; /* カードの幅を70%に設定 */
+  min-width: 300px; /* 最小幅を指定 */
+  max-width: 600px; /* 最大幅を指定 */
+  height: 400px; /* カードの高さを調整 */
+  max-height: 80vh; /* 最大高さをビューポートの80%に制限 */
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
+  padding: 20px; /* カード内のコンテンツからのパディングを追加 */
 }
 
 textarea {
-  width: 90%; /* テキストエリアをカードの80%に設定 */
-  height: 70%; /* テキストエリアの高さを調整 */
-  margin: 10px; /* マージンを追加して余白を減らす */
+  width: 100%; /* テキストエリアをカードの幅に合わせる */
+  height: 100%; /* テキストエリアをカードの高さに合わせる */
+  margin: 10px 0; /* マージンを追加して余白を調整 */
   resize: none; /* ユーザーがテキストエリアのサイズを変更できないようにする */
 }
-
 
   div:hover {
     transform: scale(1.05);
