--- a/card.html
+++ b/card.html
@@ -21,26 +21,27 @@ body {
   background-color: #334455;
   color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 70%; /* カードの幅を70%に設定 */
-  min-width: 300px; /* 最小幅を指定 */
-  max-width: 600px; /* 最大幅を指定 */
-  height: 400px; /* カードの高さを調整 */
-  max-height: 80vh; /* 最大高さをビューポートの80%に制限 */
+  width: 70%;
+  min-width: 300px;
+  max-width: 600px;
+  height: 400px;
+  max-height: 80vh;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
-  text-align: center;
-  padding: 20px; /* カード内のコンテンツからのパディングを追加 */
+  align-items: flex-start; /* テキストを左寄せに変更 */
+  text-align: left; /* テキストを左寄せに変更 */
+  padding: 20px;
 }
 
 textarea {
-  width: 100%; /* テキストエリアをカードの幅に合わせる */
-  height: 100%; /* テキストエリアをカードの高さに合わせる */
-  margin: 10px 0; /* マージンを追加して余白を調整 */
-  resize: none; /* ユーザーがテキストエリアのサイズを変更できないようにする */
+  width: 100%;
+  height: 100%;
+  margin: 0; /* テキストエリアのマージンを0に設定 */
+  resize: none;
 }
+
 
   div:hover {
     transform: scale(1.05);
@@ -79,15 +80,20 @@ button {
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-      let c = 0;
-      $("#add").on("click",function () {
-        $("#main>div").removeClass("new");
-        c++;
-        const html = `
-     <div class="new">${c}<textarea id="add_${c}" class="memo"></textarea></div>
-     `;
-        $("#main").append(html);
-      });
+let c = 0;
+
+$("#add").on("click", function () {
+  $("#main>div").removeClass("new");
+  c++;
+  const html = `
+    <div class="new"><textarea id="add_${c}" class="memo"></textarea></div>
+  `;
+  $("#main").append(html);
+  $(`#add_${c}`).focus(); // 追加されたメモにフォーカスを移動
+});
+
+// 以下略...
+
 
       $("#save").on("click",function () {
         const len = $(".memo").length;
