--- a/card.html
+++ b/card.html
@@ -66,10 +66,11 @@ button {
   background-color: #334455;
 }
 
-  div:hover {
-    transform: scale(1.05);
-    transition: transform 0.3s ease-in-out;
-  }
+div:hover {
+  transition: transform 0.3s ease-in-out;
+  transform: scale(1.05);
+}
+
 
   .new {
     border: 5px solid rgb(255, 255, 124);
@@ -86,24 +87,27 @@ button {
     transform: translateY(0);
   }
 }
-button {
-  border-radius: 5px; /* 角の丸みを持たせる */
-  background-color: #334455;
-  color: #ffffff;
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 35px;
+  padding: 10px;
+  background-color: #31a9ee;
+  color: #000;
+  border-bottom: 3px solid #006DD9;
+  box-shadow: 0 7px 10px 2px #aaaaaa;
+  display: flex; /* フレックスコンテナにする */
+  justify-content: space-between; /* 要素を横に配置 */
+  align-items: center; /* 垂直方向の中央寄せ */
+  flex-direction: row; /* 要素を横に配置 */
 }
 
-.header {
-position: fixed; /* ヘッダーを固定する */
-top: 0; /* 上部から配置の基準位置を決める */
-left: 0; /* 左から配置の基準位置を決める */
-width: 100%; /* ヘッダーの横幅を指定する */
-height: 35px; /* ヘッダーの高さを指定する */
-padding: 10px; /* ヘッダー内側の余白を指定する(上下左右) */
-background-color: #31a9ee; /* ヘッダーの背景色を指定する */
-color: #000; /* ヘッダーのフォントの色を指定する */
-border-bottom: 3px solid #006DD9; /* ヘッダーの境界線（下部）を指定する */
-box-shadow:0 7px 10px 2px #aaaaaa; /* 影を指定（[右][下][ぼかし][広がり][影の色]） */
+#add {
+  margin-left: auto;
 }
+
 </style>
 
 
