動きを加えた

--- a/card.html
+++ b/card.html
@@ -68,9 +68,13 @@ button {
 
 button:hover {
   transition: transform 0.3s ease-in-out;
-  transform: scale(1.05);
+  transform: scale(1.25);
 }
 
+div:hover {
+  transition: transform 0.3s ease-in-out;
+  transform: scale(1.01);
+}
 
   .new {
     border: 5px solid rgb(255, 255, 124);
@@ -97,7 +101,7 @@ button:hover {
   background-color: #5a789f; /* 落ち着いた青灰色に変更 */
   color: #fff;
   border-bottom: 3px solid #778899; /* ボーダー色も調整 */
-  box-shadow: 0 7px 10px 2px #aaaaaa;
+  box-shadow: 0 7px 8px 2px #aaaaaa;
   display: flex;
   justify-content: space-between;
   align-items: center;
