--- a/card.html
+++ b/card.html
@@ -24,25 +24,6 @@ body {
     margin-top: 20px;
   }
 
-  div {
-  background-color: #334455;
-  color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: calc(35% - 40px); /* 左右と同じ幅で上下にも追加 */
-  min-width: auto;
-  max-width: 1400px;
-  height: 400px;
-  max-height: 80vh;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  text-align: left;
-  padding: 20px;
-  margin: 20px; /* カード同士のマージンを追加 */
-}
-
 textarea {
   width: 100%;
   height: 100%;
@@ -107,7 +88,24 @@ div:hover {
   align-items: center;
   flex-direction: row;
 }
+div {
+  background-color: #334455;
+  color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: calc(35% - 40px); /* 左右と同じ幅で上下にも追加 */
+  min-width: auto;
+  max-width: auto;
+  height: 400px;
+  max-height: 80vh;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  text-align: left;
+  padding: 20px;
 
+}
 #add {
   margin-left: auto;
 }
@@ -128,6 +126,7 @@ div:hover {
     <script>
 let c = 0;
 
+// これは追加ボタンのコード
 $("#add").on("click", function () {
   $("#main>div").removeClass("new");
   c++;
@@ -138,6 +137,7 @@ $("#add").on("click", function () {
   $(`#add_${c}`).focus(); // 追加されたメモにフォーカスを移動
 });
 
+// これは保存ボタンのコード
       $("#save").on("click",function () {
         const len = $(".memo").length;
         let ary = [];
@@ -147,13 +147,15 @@ $("#add").on("click", function () {
         localStorage.setItem("card", JSON.stringify(ary));
       });
 
+// これは削除ボタンのコード
       $("#clear").on("click",function(){
-        if (!confirm('本当に消去しますか？')) return false;
+        if (!confirm('本当に全部を消去しますか？')) return false;
         localStorage.clear();
         $("#main").empty();
         c=0;
       });
 
+// これはローカルストレージに保存されているメモを画面に表示する処理を行っているコード
       window.onload = function () {
         const ary = JSON.parse(localStorage.getItem("card")) || [];
         let c = ary.length;
